# ibis-web-application

./: .gitignore  README.md  docker-compose.yml
api/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: AdFooter.vue  Description.vue  Dropzone.vue  Navbar.vue  Sidebar.vue  Title.vue
frontend/src/plugins/: vuetify.js
frontend/src/stages/: AnalysisPage.vue  BuildPage.vue  CitationPage.vue  InitialPage.vue  LogisticsPage.vue  ScoringPage.vue
reverse_proxy/: nginx.conf
