[tool.poetry]
name = "ibis_web_application"
version = "0.1.0"
description = ""
authors = ["W.R. Jackson, Eric South, Benjamin Bremmer"]
license = "Open-MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
